# poetry_testes

./: README.md  caderno_teste.ipynb
projeto_teste/: pyproject.toml
projeto_teste/projeto_teste/: classe.py
projeto_teste/tests/: test_projeto_teste.py
