[tool.poetry]
name = "projeto_teste"
version = "0.1.1"
description = "Pacote criado para realizar tetes de criação e publicação de pacotes usando a ferramenta poetry."
authors = ["WLAraujo <lima.wesleyaraujo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
